--- a/WeatherApp/WeatherApp.Android/EmpowermentApp.Android.csproj
+++ b/WeatherApp/WeatherApp.Android/EmpowermentApp.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>WeatherApp.Droid</RootNamespace>
-    <AssemblyName>WeatherApp.Android</AssemblyName>
+    <RootNamespace>EmpowermentApp.Droid</RootNamespace>
+    <AssemblyName>EmpowermentApp.Android</AssemblyName>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -63,7 +63,9 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <None Include="Properties\AndroidManifest.xml" />
+    <None Include="Properties\AndroidManifest.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.axml" />
@@ -91,9 +93,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WeatherApp\WeatherApp.csproj">
-      <Project>{365B0CBC-61B7-4F56-B639-A49F0F81EB72}</Project>
-      <Name>WeatherApp</Name>
+    <ProjectReference Include="..\WeatherApp\EmpowermentApp.csproj">
+      <Project>{85E4DD86-5598-44E6-AC41-247221559D90}</Project>
+      <Name>EmpowermentApp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
