--- a/WeatherApp/WeatherApp.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/WeatherApp.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.WeatherApp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.EmpowermentApp">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
-	<application android:label="WeatherApp.Android"></application>
+	<application android:label="EmpowermentApp.Android"></application>
 </manifest>
