--- a/WeatherApp/WeatherApp.iOS/Info.plist
+++ b/WeatherApp/WeatherApp.iOS/Info.plist
@@ -23,15 +23,15 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>WeatherApp</string>
+	<string>EmpowermentApp</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.WeatherApp</string>
+	<string>com.companyname.EmpowermentApp</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>WeatherApp</string>
+	<string>EmpowermentApp</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
